--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="welcome">Welcome</string>
     <string name="password">Password</string>
     <string name="user_id">User ID</string>
+    <string name="user_image">user_image</string>
 </resources>
