--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="password">Password</string>
     <string name="user_id">User ID</string>
     <string name="user_image">user_image</string>
+    <string name="app_token">App Token</string>
 </resources>
